--- a/src/components/ui/Pagination/pagination.css
+++ b/src/components/ui/Pagination/pagination.css
@@ -24,7 +24,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
-  color: #5C7099;
+  color: #5c7099;
 }
 
 .page-item a {
@@ -43,13 +43,13 @@
 }
 
 .active.page-item a {
-  background-color: #3361FF;
+  background-color: #3361ff;
   color: #ffffff;
   border-radius: 20px;
 }
 
 .active.page-item a:hover {
-  background-color: #3361FF;
+  background-color: #3361ff;
 }
 
 .break {
